# CSE_4302_Project

./: README.md  meson.build
.cache/clangd/index/: aahil.cpp.47945B8989CABBE2.idx  assessment.cpp.0F9A18EF669C3150.idx  course.cpp.D16CB5F7EA45C696.idx  grade.cpp.173AD8FEC04BAE26.idx  main.cpp.E1B9994EBC0125A3.idx  main.cpp.FC4C7FA638CF0655.idx  schoolsystem.cpp.533DD27D05DB5821.idx  user.cpp.2789037AF4B626A6.idx  user.cpp.92D4096193854954.idx  user.h.D74E61E9E288351F.idx
src/: assessment.cpp  assessment.h  course.cpp  file_ops.h  grade.cpp  grade.h  main.cpp  meson.build  schoolsystem.cpp  user.cpp  user.h
